--- a/Crystal.csproj
+++ b/Crystal.csproj
@@ -128,10 +128,10 @@
     <Resource Include="Images\Info.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\DeadBoundaries.png" />
+    <Resource Include="Images\SnowFlake.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\SnowFlake.png" />
+    <Resource Include="Images\ConstantPha&amp;Tem.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
