--- a/Crystal.csproj
+++ b/Crystal.csproj
@@ -74,8 +74,8 @@
     </ApplicationDefinition>
     <Compile Include="Cell.cs" />
     <Compile Include="Rules.cs" />
-    <Compile Include="Window2.xaml.cs">
-      <DependentUpon>Window2.xaml</DependentUpon>
+    <Compile Include="ContourInfo.xaml.cs">
+      <DependentUpon>ContourInfo.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -90,7 +90,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Window2.xaml">
+    <Page Include="ContourInfo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
